Write Phase 8: Logging through Performance Tuning (12/12 chapters)
All chapters written using the established evidence-first methodology —
every log line, metric, thread dump, GC trace, and CLI output is captured
from a real running Spring Boot 3.3.4 demo app, real Docker containers
(Redis, Kafka, Artemis), a real kind Kubernetes cluster, and real JVM
diagnostics (jstack, -Xlog:gc, PrintFlagsFinal).

- 01 Logging: MDC thread-pool leak reproduced via raw ExecutorService test
- 02 Metrics: Micrometer Counter/Timer/Gauge, real Gauge NaN bug from a
  weakly-referenced state object, Prometheus exposition format
- 03 Tracing: W3C traceparent propagation; new RestTemplate() silently
  breaks trace propagation vs an auto-configured RestTemplateBuilder bean
- 04 HikariCP: real pool-exhaustion "Connection is not available" error
  and leak-detection-threshold warning, pool sized to force it
- 05 Redis: default RedisTemplate JDK-serializes keys (verified via the
  raw \xac\xed magic header in redis-cli), fixed with proper serializers
- 06 Kafka: earliest vs latest offset reset proven with a raw
  KafkaConsumer against a real broker
- 07 Messaging: JMS queue (competing consumers) vs topic (pub-sub) proven
  against embedded Artemis; a real @ConditionalOnMissingBean gotcha where
  a custom JmsTemplate silently replaced the default one
- 08 Docker: multi-stage build cuts image size 811MB -> 367MB; JVM
  container-aware heap sizing verified across four --memory limits
- 09 Kubernetes: real 3-replica Deployment on a kind cluster; readiness/
  liveness probes only auto-enable inside real Kubernetes (verified 404
  in plain Docker vs 200 in-cluster, traced to KUBERNETES_SERVICE_HOST)
- 10 CI/CD: workflow validated with actionlint and executed locally with
  act; actionlint also caught a real script-injection pattern
- 11 JVM Tuning: G1 vs Serial vs Parallel GC benchmarked on identical
  workload; G1's humongous-allocation overhead measured and explained
- 12 Performance Tuning: repro